tests/build/impl_ui_node_macro/fail/invalid_delegate_pair_name.stderr
error: expected `delegate_mut`
 --> $DIR/invalid_delegate_pair_name.rs:6:39
  |
6 | #[impl_ui_node(delegate: &self.inner, delegate2: &mut self.inner)]
  |                                       ^^^^^^^^^

warning: unused import: `UiNode`
 --> $DIR/invalid_delegate_pair_name.rs:1:46
  |
1 | use zero_ui::core::{impl_ui_node, NilUiNode, UiNode};
  |                                              ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
